# ocaml-transducers

./: dune  dune-project
lib/: Gen_reducer.ml  Td.ml  Td_test.ml  Transducer.ml  dune
test/: dune
